Thu Jun 26 06:38:13 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* docs/queries.rst: Add new document describing how to use Query
	  objects.  Some FIXMEs in sections which are still to be written.
	* xappy/test.py: Add some useful symbols to the namespace in which
	  tests are run.  Test weighting.rst and queries.rst
	* build.py: Build queries.html
	* docs/introduction.rst: Change some examples to use the new method
	  of combining queries.

Thu Jun 26 06:35:18 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/query.py: Add methods to get the maximum possible weight,
	  normalise the weight of a Query, and to perform a search, to
	  Query().
	* xappy/searchconnection.py: Supply self to newly constructed
	  Query() objects so they can keep track of the connection.  Allow
	  weight_params to be specified to get_max_possible_weight(), so
	  that the return value is compatible with that.

Wed Jun 25 21:32:30 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/query.py: Code tidyup.  Also, make queries keep track of
	  the connection they were obtained from: complain if an attempt to
	  combined queries from different connections is made.  This is
	  preparation for allowing the search to be performed as a method
	  of Query.

Wed Jun 25 13:53:02 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/query.py: Allow division of queries by a number (equivalent
	  to multiplying by 1.0 / number).

Wed Jun 25 13:36:30 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/query.py: Add &, | and ^ operators for queries.

Wed Jun 25 12:09:21 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/: Move implementation of Query() to a separate file, and
	  remove the __iter__() method, since it returns raw xapian terms,
	  which we don't want to expose in the user interface.

Wed Jun 25 11:33:27 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
