@@ -1,3 +1,8 @@
+Thu Jun 26 10:44:09 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/query.py: Add Query.empty(), with the same semantics as
+	  xapian.Query.empty().
+
 Thu Jun 26 06:38:13 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
 
 	* docs/queries.rst: Add new document describing how to use Query
